<resources>
    <string name="app_name">Inteliment India Tech Evaluation</string>
    <string name="action_settings">Settings</string>
    <string name="action_scenario_1">Scenario 1</string>
    <string name="action_scenario_2">Scenario 2</string>
    <string name="redBtn">Red</string>
    <string name="greenBtn">Green</string>
    <string name="blueBtn">Blue</string>
    <string name="navBtn">Navigate</string>
    <string name="title_mode_transport">Mode Of Transport</string>
    <string name="format_mode_car">Car : %1$s</string>
    <string name="format_mode_train">Train : %1$s</string>

    <string-array name="tab_titles">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4</item>
        <item>Item 5</item>
    </string-array>
</resources>
