<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="db.apps.android.intelimenttechevaluation.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/scenarioBtn1"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="@dimen/app_title_size"
        android:gravity="center"/>


    <Button
        android:id="@+id/scenarioBtn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/scenarioBtn2"
        android:text="@string/action_scenario_1"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/scenarioBtn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/fab_margin"
        android:text="@string/action_scenario_2"
        android:onClick="onClick"/>

</RelativeLayout>
